--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tree-sitter grammar for Qt's markup language",
   "main": "bindings/node",
   "scripts": {
-    "build": "tree-sitter generate",
+    "generate": "tree-sitter generate",
     "parse": "tree-sitter parse",
     "test": "tree-sitter test"
   },
